iiwa_hwextaxis: creacion de interfaz de hardware combinada de robot y eje externo \n iiwa_descriptionextaxis celula representando robot y eje rotatorio \niiwa_moveitextaxis paquete moveit integrando eje externo

--- a/iiwa_control/config/iiwa_control.yaml
+++ b/iiwa_control/config/iiwa_control.yaml
@@ -1,4 +1,4 @@
-#iiwa:
+iiwa:
   # Publish all joint states -----------------------------------
   joint_state_controller:
     type: joint_state_controller/JointStateController
@@ -135,7 +135,8 @@
     stop_trajectory_duration: 0        # Override default
     
   # Forward Position Controllers ---------------------------------------
-  PositionJointInterface_trajectory_controller:
+  #PositionJointInterface_trajectory_controller:
+  position_trajectory_controller:
     type: position_controllers/JointTrajectoryController
     joints: 
       - iiwa_joint_1
